Fix header on small screens, update some style (UX feedback)

--- a/src/assets/css/inc/variables.scss
+++ b/src/assets/css/inc/variables.scss
@@ -11,16 +11,16 @@ $default-margin: $default-padding;
 $max-content-width: 1366px;
 
 // See: https://mozilla.design/firefox/typography/
-$body-sm-font-size: 14px;
-$body-sm-line-height: 22px;
+$body-sm-font-size: 16px;
+$body-sm-line-height: 1.5;
 $heading-xxs-font-size: 20px;
-$heading-xxs-line-height: 24px;
+$heading-xxs-line-height: 1.2;
 $heading-xs-font-size: 24px;
-$heading-xs-line-height: 28px;
+$heading-xs-line-height: 1.16;
 $heading-sm-font-size: 32px;
-$heading-sm-line-height: 36px;
+$heading-sm-line-height: 1.125;
 $heading-md-font-size: 40px;
-$heading-md-line-height: 44px;
+$heading-md-line-height: 1.1;
 
 // No "small" breakpoint is defined here because we are mobile-first.
 //
@@ -30,6 +30,14 @@ $breakpoints: (
   m: only screen and
     (
       min-width: 500px,
+    ),
+  m-height: only screen and
+    (
+      min-width: 500px,
+    )
+    and
+    (
+      min-height: 500px,
     ),
   l: only screen and
     (
